# cuda_uarch

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt
benchmarks/advanced/: CMakeLists.txt  atomic_probe.cu  denorm_probe.cu  occupancy_probe.cu  peak_compute_probe.cu  precision_probe.cu  register_probe.cu  sfu_probe.cu  switch_probe.cu
benchmarks/common/: config.h  timer.h  utils.cu  utils.h
benchmarks/instruction/: CMakeLists.txt  latency_probe.cu  throughput_probe.cu
benchmarks/memory/: CMakeLists.txt  associativity_probe.cu  cache_size_probe.cu  constant_mem_probe.cu  global_mem_bw.cu  global_mem_latency.cu  shared_mem_bank.cu
benchmarks/scheduler/: CMakeLists.txt  warp_scheduler_probe.cu  warp_shuffle_probe.cu
cmake/: CompilerOptions.cmake  DetectCUDAArch.cmake
docs/: ANALYSIS.md  PLAN.md
tools/: check_env.sh  install-precommit.sh  plot_results.py
